Fix squishing in small width view

--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,9 @@ body {
   background-color: hsl(235, 10%, 20%);
   color: hsl(235, 10%, 90%);
   font-family: 'Antonio', sans-serif;
-  /* font-family: 'Zen Dots', cursive; */
-}
-
-button {
-  /* border: none; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
@@ -78,6 +76,7 @@ label {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 250px;
 }
 
 #whose-turn {
@@ -86,7 +85,6 @@ label {
   align-items: center;
   font-family: 'Zen Dots', cursive;
   height: 3rem;
-  /* border: 1px solid red; */
 }
 
 .cell {
@@ -101,11 +99,8 @@ label {
   border-radius: 5px;
 
   font-size: xx-large;
-
   cursor: pointer;
-
   transition-duration: 0.5s;
-  /* font-family: 'Zen Dots', Arial, Helvetica, sans-serif; */
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -120,36 +115,39 @@ label {
 }
 
 @media only screen and (min-width: 430px) {
-  body {
-    /* color: orange; */
-  }
   input {
     margin-left: 0.5rem;
     margin-top: 0px;
   }
+
+  #top-wrapper {
+    width: initial;
+  }
+
   #whose-turn {
     font-size: x-large;
   }
+
   .form-section {
     flex-direction: row;
   }
 }
 
 @media only screen and (min-width: 600px) {
-  body {
-    /* color: blue; */
-  }
   form {
     flex-direction: row;
     margin-top: 2rem;
   }
+
   input {
     margin: 0;
     margin-top: 3px;
   }
+
   #whose-turn {
     font-size: xx-large;
   }
+
   .form-section {
     flex-direction: column;
     margin: 20px;
